--- a/css/style.css
+++ b/css/style.css
@@ -813,8 +813,77 @@ html{
     
 }
 
+.footer__about{
+    display: flex;
+    align-items: center;
+
+    column-gap: 100px;
+
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
 .footer__menu{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    column-gap: 100px;
+
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 13px;
+}
+
+.paragraph__top{
+    width: 400px;
+    margin-bottom: 10px;
+
+    
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 15px;
+}
+.paragraph__bottom{
+    width: 400px;
+    margin-bottom: 15px;
+
+    
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 15px;
+}
+
+.copyright{
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 15px;
+}
+
+
+.company__my-giro h6{
+    font-weight: 700;
+    margin-bottom: 10px;
+
+    font-size: 14px;
+}
+
+.for__customers h6{
+    font-weight: 700;
+    margin-bottom: 10px;
+
+    font-size: 14px;
+}
+
+.help h6{
+    font-weight: 700;
+    margin-bottom: 10px;
+
+    font-size: 14px;
+}
+
+.item__list{
+    font-weight: 400;
+    font-size: 14px;
+    margin-bottom: 10px;
 }
